# wsn

./: .gitignore  README.md  sdkconfig
components/hardware/: CMakeLists.txt  hardware.c  hardware.h
components/hardware/io/: io.h
components/hardware/io/button/: button.c  button.h
components/hardware/power/: power.c  power.h
components/network/: CMakeLists.txt  network.c  network.h
components/network/transport/: transport.c  transport.h
components/network/transport/http/: http.c  http.h
components/network/transport/mqtt/: mqtt.c  mqtt.h
components/network/wifi/: wifi.c  wifi.h
components/network/wifi/WiFiPanel/: .gitignore  README.md
components/network/wifi/WiFiPanel/include/: WiFiPanel.h  WiFiPanel_Defs.h  WiFiPanel_Priv.h
components/network/wifi/WiFiPanel/src/: WiFiPanel.c  WiFiPanel_Page.c  WiFiPanel_Portal.c
components/network/wifi/WiFiPanel/ui/: wifi_config.h  wifi_home.h  wifi_ota.h  wifi_scan.h
main/: CMakeLists.txt  main.c
main/app/: app.c  (+1 more)
wsn_gateway/components/network/: CMakeLists.txt  network.c  network.h
wsn_gateway/components/network/send/http/: http_transport.c  http_transport.h
wsn_gateway/components/network/send/wifi/: wifi.c  wifi.h
wsn_gateway/components/network/send/wifi/WiFiManager/: LICENSE  README.md  idf_component.yml
wsn_gateway/components/network/send/wifi/WiFiManager/examples/basic/: CMakeLists.txt
wsn_gateway/components/network/send/wifi/WiFiManager/examples/basic/main/: CMakeLists.txt  main.c
wsn_gateway/components/network/send/wifi/WiFiManager/include/: WiFiManager.h  WiFiManager_defs.h  WiFiManager_private.h
wsn_gateway/components/network/send/wifi/WiFiManager/src/: WiFiManager_core.c  WiFiManager_page.c  WiFiManager_portal.c
(+64 files in other folders)
